--- a/css/base.css
+++ b/css/base.css
@@ -1,13 +1,14 @@
 body {
   font-family: var(--font-sans);
-  background: var(--bg);
-  color: var(--text-color);
-  margin: 0;
-  padding: 0;
+  background:   var(--bg);
+  color:        var(--text-color);
+  margin:       0;
+  padding:      0;
 }
+
 .container {
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
-  position: relative; /* для paw-container */
+  margin:    0 auto;
+  padding:   1rem;
+  position:  relative; /* для pawprints */
 }
