--- a/css/components/pawprints.css
+++ b/css/components/pawprints.css
@@ -1,9 +1,7 @@
 .paw-container {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
   pointer-events: none;
   overflow: hidden;
   z-index: 1;
@@ -15,6 +13,7 @@
   left: var(--x);
   width: 40px;
   height: 40px;
+  /* Абсолютний шлях до SVG */
   background: url('/images/paw-print.svg') no-repeat center/contain;
   opacity: 0;
   transform: scale(0.5) rotate(var(--r, 0deg));
